<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_moving_obstacles</name>
  <version>0.0.0</version>
  <description>The planning_moving_obstacles package</description>

  <maintainer email="aswinthomas@gmail.com">Aswin Thomas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3-gazebo</depend>
  <depend>turtlebot3-navigation</depend>
  <depend>turtlebot3-slam</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>cartographer_ros</depend>
  <depend>dwa_local_planner</depend>
  <depend>gazebo_ros</depend>
  <depend>tuw_aruco</depend>
  <depend>backward_ros</depend>
  <depend>navigation_experimental</depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
